Relocate navbar and menu/footer outside pageWrapper. Implement google map on myLocation-page, fine-tune styling for the map to fit. Correct height issues with pageWrapper--not including fixing all pages to align accordingly.

--- a/client/src/assets/scss/styles.scss
+++ b/client/src/assets/scss/styles.scss
@@ -24,11 +24,12 @@ html {
       height: 100%;
 
       .App {
+        position: relative;
         height: 100%;
         width: 100%;
 
         .pageWrapper {
-          height: 90%;
+          // height: 90%;
         }
       }
     }
