--- a/client/src/components/login-form/login.scss
+++ b/client/src/components/login-form/login.scss
@@ -1,6 +1,5 @@
 .login--bg {
-    background-image: url("https://images.pexels.com/photos/219998/pexels-photo-219998.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    height: 90%;
+  background-image: url("https://images.pexels.com/photos/219998/pexels-photo-219998.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  /* Denna height pga att pageWrapperns height är borttagen */
+  height: 85vh;
 }
-
-
